--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1328,6 +1328,33 @@ h3.mymaps {
   }
 }
 
+#pc-select-param{
+  padding: 20px;
+  h5{
+    margin: 0px;
+    font-size: 24px;
+    margin-right: 20px;
+  }
+  p{
+    margin: 10px 0px;
+  }
+  ul{
+    li{
+      margin: 10px 0px;
+      button{
+        @include hoverer1();
+        box-shadow: 2px 2px 6px rgb(112, 112, 112);
+        border: 2px solid black;
+        border-radius: 3px;
+        padding: 2px 10px;
+        background-color: rgb(236, 236, 236);
+        font-weight: bold;
+        font-size: 16px;
+      }
+    }
+  }
+}
+
 #analysis-container {
   min-height: 50vh;
   padding-bottom: 10vh;
@@ -1500,7 +1527,7 @@ h3.mymaps {
   overflow-x: scroll;
 }
 
-#algorithm-container{
+#algorithm-container, #packcrack-container{
   background-color: lightgray;
   width: 400px;
   z-index: 10;
