--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -59,6 +59,22 @@
   @include sbstyle();
 }
 
+@mixin spbstyles{
+  background-color: purple;
+  padding: 8px 20px;
+  font-size: 16px;
+  font-weight: bold;
+  color: white;
+  box-shadow: 2px 2px 10px rgb(109, 109, 109);
+  border: none;
+  @include hoverer1();
+
+}
+
+.spb{
+  @include spbstyles()
+}
+
 button .plus-icon {
   margin-right: 5px;
   height: 16px;
@@ -365,7 +381,7 @@ header {
 
 #home-section{
   font-weight: bold;
-  margin-bottom: 100px;
+  margin-bottom: 50px;
 }
 
 #home-popup{
