--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1371,6 +1371,9 @@ h3.mymaps {
     font-size: 24px;
     margin-right: 20px;
   }
+  input{
+    max-width: 100px;
+  }
   p{
     margin: 10px 0px;
   }
