--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -800,6 +800,52 @@ header {
   }
 }
 
+#additional-links{
+  margin-bottom: 30vh;
+  h3{
+    font-size: 36px;
+    font-style: italic;
+    text-shadow: 1px 1px 3px grey;
+    margin: 0px 0px 30px 0px;
+  }
+  ul{
+    display: grid;
+    grid-template-columns: repeat(4,1fr);
+    li{
+      max-width: 300px;
+      h5{
+        display: inline-block;
+        border-radius: 5px;
+        font-size: 24px;
+        margin: 60px 0px 0px 0px;
+      }
+      p{
+        margin: 10px 0px;
+      }
+    }
+  }
+}
+
+
+@media (max-width: 1400px){
+  #additional-links ul{
+    grid-template-columns: repeat(3,1fr);
+  }
+}
+
+
+@media (max-width: $breakpoint-large){
+  #additional-links ul{
+    grid-template-columns: repeat(2,1fr);
+  }
+}
+
+@media (max-width: $breakpoint-mobile){
+  #additional-links ul{
+    grid-template-columns: repeat(1,1fr);
+  }
+}
+
 #submitted{
   #user{
     padding: 5px 15px;
@@ -809,6 +855,13 @@ header {
     color: white;
     font-weight: bold;
     display: block;
+  }
+  #information{
+    p{
+      font-size: 20px;
+      line-height: 1.5;
+      margin: 10px 0px;
+    }
   }
   .image{
     height: 200px;
@@ -835,12 +888,15 @@ header {
       border-radius: 5px;
       font-size: 18px;
     }
+    
   }
   #allmaps{
     display: grid;
     grid-template-columns: repeat(4,1fr);
+    margin: 10vh 0px 20vh 0px;
     li{
       max-width: 250px;
+      margin: 20px 0px;
       h6{
         margin: 10px 0px 0px 0px;
         font-size: 30px;
@@ -863,8 +919,10 @@ header {
     }
   }
   .showLogin{
-    margin-top: 30vh;
+    margin-top: 30px;
     margin-bottom: 20px;
+    transform:  translateY(50px);
+    color: grey
   }
   #login-area{
     margin: 20px 0px;
@@ -873,6 +931,31 @@ header {
       border-radius: 5px;
       margin: 5px;
     }
+  }
+  #links{
+    h4{
+      font-size: 30px;
+      margin: 30px 0px 10px 0px;
+    }
+  }
+}
+
+@media (max-width: 1400px){
+  #submitted #allmaps{
+    grid-template-columns: repeat(3,1fr);
+  }
+}
+
+
+@media (max-width: $breakpoint-large){
+  #submitted #allmaps{
+    grid-template-columns: repeat(2,1fr);
+  }
+}
+
+@media (max-width: $breakpoint-mobile){
+  #submitted #allmaps{
+    grid-template-columns: repeat(1,1fr);
   }
 }
 
@@ -2114,18 +2197,36 @@ h3.mymaps {
 
 
 .page-header{
-  padding: 5vh 20px;
+  position: relative;
+  padding: 8vh 20px;
   background-color: lightgrey;
   box-shadow: 3px 3px 5px rgb(119, 119, 119);
   margin: 30px 0px;
+  z-index: 2;
   h2{
-    font-size: 30px;
+    font-size: 36px;
     font-weight: bold;
+    text-shadow: 1px 1px 3px rgb(75, 75, 75);
     margin: 0px;
   }
   p{
     font-size: 16px;
     margin: 0px
+  }
+  .background{
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    z-index: -1;
+    opacity: 0.4;
+  }
+  &.lighten{
+    background-color: rgba($color: #979797, $alpha: 0.5);
   }
 }
 
