--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1660,6 +1660,7 @@ h3.mymaps {
 #precinct-list {
   max-height: 60vh;
   overflow-y: scroll;
+  overflow-x: hidden;
   li.single-precinct {
     padding: 10px 20px;
     border-radius: 15px;
@@ -1731,6 +1732,25 @@ h3.mymaps {
     button:nth-child(1) {
       margin-right: 10px;
     }
+  }
+}
+
+.nodata {
+  overflow: hidden;
+  @include col();
+  svg{
+    height: 200px;
+  }
+  p{
+    font-size: 16px;
+    font-weight: bold;
+    margin-bottom: 30px;
+  }
+  div{
+    font-size: 22px;
+    font-weight: bold;
+    margin: 30px;
+
   }
 }
 
@@ -2233,11 +2253,13 @@ h3.mymaps {
 #people-list{
   margin: 10vh 0px 20vh 0px;
   li{
-    @include row();
+    display: grid;
+    grid-template-columns: 150px 1fr;
     .person-image{
       width: 120px;
-      height: 120px;
-      border-radius: 10%;
+      height: 150px;
+      border-radius: 5px;
+      //border: 3px solid black;
       background-size: cover;
       background-position: center;
       box-shadow: 0px 0px 5px grey;
